@@ -45,6 +45,8 @@
  * Disallow WiMAX group lead from deleting their WiMAX
    account while they still lead some other WiMAX group. (#1151)
  * Add a button for launching jFed on the Home, Slices and Slice pages. (#1092)
+ * Correct error message on uploading an RSpec but not picking an AM,
+   and tryign to reserve resources. (#1152)
 
 == 2.18.1 ==
  * When displaying a stitching RSpec, do not filter results by AM. (#1130)
